Added comments, removed last comma in chart series (not necessary because HighCharts didn't crash, but nicer)

--- a/app/views/mindleaps_analytics/main/first.html.erb
+++ b/app/views/mindleaps_analytics/main/first.html.erb
@@ -32,7 +32,8 @@
                 {
                     name: 'Group <%= entry[:name] %>', // e.g. 'Group A',
                     data: <%= entry[:data] %>  // e.g. [[0,1], [2,2], ...]
-                }, // last ',' doesn't crash highcharts, so we'll leave it
+                }
+                <%=',' unless entry == @series.last %>
                 <% end %>
             ]
         });
