Simplified stuff, more comments

--- a/app/views/mindleaps_analytics/main/first.html.erb
+++ b/app/views/mindleaps_analytics/main/first.html.erb
@@ -14,6 +14,9 @@
             chart: {
                 type: 'scatter'
             },
+            credits: {
+                enabled: false
+            },
             title: {
                 text: '<%=t :performance_vs_time %>'
             },
