--- a/app/views/mindleaps_analytics/main/second.html.erb
+++ b/app/views/mindleaps_analytics/main/second.html.erb
@@ -1,2 +1,186 @@
-<h1>Main#second</h1>
-<p>Find me in app/views/mindleaps_analytics/main/second.html.erb</p>
+<head>
+  <script src="http://code.highcharts.com/highcharts.js"></script>
+</head>
+<h1>Analytics (Subject)</h1>
+<!--<p>Find me in app/views/mindleaps_analytics/main/first.html.erb</p>-->
+<%#= @categories3 %>
+<!--<br/>-->
+<%#= @series3 %>
+<!--<br/>-->
+<%#= @series3.length %>
+
+<%= form_tag do %>
+    <table>
+      <tr>
+        <td style="padding-right: 20px;">
+          <%= label_tag :organization_label, "Organization" %>
+          <%= select_tag :organization_select, options_from_collection_for_select(Organization.all, :id, :organization_name, @organization) %>
+        </td>
+        <td style="padding-right: 20px;">
+          <%= label_tag :chapter_label, "Chapter" %>
+          <%= select_tag :chapter_select, options_from_collection_for_select(Chapter.all, :id, :chapter_name, @chapter), :prompt => 'All' %>
+        </td>
+        <td style="padding-right: 20px;">
+          <%= label_tag :group_label, "Group" %>
+          <%= select_tag :group_select, options_from_collection_for_select(Group.all, :id, :group_name, @group), :prompt => 'All' %>
+        </td>
+        <td style="padding-right: 20px;">
+          <%= label_tag :subject_label, "Subject" %>
+          <%= select_tag :subject_select, options_from_collection_for_select(Subject.all, :id, :subject_name, @subject) %>
+        </td>
+        <!--<td style="padding-right: 20px;">-->
+        <!--<%#= label_tag :student_select, "Student" %>-->
+        <!--<%#= select_tag :student_select, options_from_collection_for_select(Student.all, :id, :first_name, @selected_student) %>-->
+        <!--</td>-->
+        <td style="padding-right: 20px;">
+          <%= submit_tag "Submit" %>
+        </td>
+      </tr>
+    </table>
+<% end %>
+
+<table id="trellis" style="width: 100%; table-layout: fixed;">
+  <tr>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+    <td></td>
+    <td></td>
+  </tr>
+</table>
+
+<script>
+
+    $('#organization_select').change(function () {
+
+        var selectedOrganization = $('#organization_select :selected').val();
+        console.log(selectedOrganization)
+
+        $.ajax({
+            url: '<%=find_update_chapters_path%>',
+            type: 'GET',
+            dataType: 'json',
+            data: {
+                organization_id: selectedOrganization
+            },
+            success: function (data) {
+                var chapters = data.chapters;
+                debugger;
+
+                $('#chapter_select').empty();
+                var opt = document.createElement('option');
+                opt.text = 'All';
+                $('#chapter_select').append(opt, null);
+
+                for (i = 0; i < chapters.length; i++) {
+                    var chapter = chapters[i];
+
+                    var opt = document.createElement('option');
+                    opt.text = chapter.chapter_name;
+                    opt.value = chapter.id;
+
+                    $('#chapter_select').append(opt, null);
+                }
+                $('#chapter_select').select(0);
+                $('#chapter_select').change();
+            },
+            error: function (data) {
+                debugger;
+            }
+        });
+    });
+    $('#chapter_select').change(function () {
+
+        var selectedChapter = $('#chapter_select :selected').val();
+//        console.log(selectedChapter)
+
+        $.ajax({
+            url: '<%=find_update_groups_path%>',
+            type: 'GET',
+            dataType: 'json',
+            data: {
+                chapter_id: selectedChapter
+            },
+            success: function (data) {
+                var groups = data.groups;
+                debugger;
+
+                $('#group_select').empty();
+                var opt = document.createElement('option');
+                opt.text = 'All';
+
+                $('#group_select').append(opt, null);
+                for (i = 0; i < groups.length; i++) {
+                    var group = groups[i];
+
+                    var opt = document.createElement('option');
+                    opt.text = group.group_name;
+                    opt.value = group.id;
+
+                    $('#group_select').append(opt, null);
+                }
+            },
+            error: function (data) {
+                debugger;
+            }
+        });
+    });
+
+    $(function () {
+        var charts = [],
+            $containers = $('#trellis td'),
+            datasets = <%= @series3.html_safe %>;
+
+
+        $.each(datasets, function (i, dataset) {
+            charts.push(new Highcharts.Chart({
+
+                chart: {
+                    renderTo: $containers[i],
+                    type: 'column'
+                },
+
+                title: {
+                    text: dataset.name,
+                    align: 'left',
+                    x: i === 0 ? 90 : 0
+                },
+
+                credits: {
+                    enabled: false
+                },
+
+                xAxis: {
+                    categories: <%= @categories3.html_safe %>,
+                    labels: {
+                        enabled: true
+                    }
+                },
+
+                yAxis: {
+                    allowDecimals: false,
+                    title: {
+                        text: '<%= t(:frequency_perc) %>'
+                    }
+                },
+
+
+                legend: {
+                    enabled: false
+                },
+
+                series: [dataset]
+
+            }));
+        });
+    });
+</script>
