--- a/app/views/mindleaps_analytics/main/first.html.erb
+++ b/app/views/mindleaps_analytics/main/first.html.erb
@@ -192,7 +192,7 @@
                 title: {
                     text: '<%= t(:month) %>'
                 },
-                categories: <%= @categories2.inspect.html_safe %>
+                categories: <%= @categories2.html_safe %>
             },
             yAxis: {
                 title: {
